# ai

Plan_Thinking/: 企业业务信息使用外部大模型服务的脱敏方案-业务思考与底层数学推理过程.md  企业业务信息使用外部大模型服务的脱敏方案-基于语义向量空间一致性的业务思考与数学推理.docx  企业业务信息使用外部大模型服务的脱敏方案-简历脱敏NER模型训练方法V1.md  企业业务信息使用外部大模型服务的脱敏方案-简历训练数据生成V1.md  企业级 AI 大数据平台架构：从“能力集成”到“合规自主智能”的范式转移 (2024-2026) .mht
Plan_Thinking/AI大数据平台演进思考/: 从能力集成到合规自主智能的范式转移.md
Plan_Thinking/企业业务数据信息脱敏算法模型服务方案/: 企业业务信息使用外部大模型服务的脱敏方案-主要数学证明.md  企业业务信息使用外部大模型服务的脱敏方案-简历脱敏NER模型训练方法V1.md  企业业务信息使用外部大模型（LLM）服务的脱敏方案 -基于语义向量空间一致性的业务思考与数学推理.md
ai_platform/: README.md
demo/: NLP-使用SpaCy训练自定义NER模型的方法V1.md  config_lg.cfg  pyproject.toml
demo/Dify/chat_agent/: README.md  chat_agent.yml  chat_test.yml
demo/NLP-使用SpaCy训练识别自定义NER的本地模型/: config.cfg  ner_add.py  ner_dev.py  ner_test.py  requirements.txt  train_fix.py
demo/OS/: Ubuntu和Windows双系统从mbr转换gpt后修复引导操作
demo/llama_cpp/: Ubuntu安装llama_cpp
demo/qwen_fine/: README.md  convert_to_gguf.py  convert_to_gguf_lora.py  main.py  make_data.py  mini_dataset.jsonl  requirements.txt
demo/vllm/: Ubuntu安装vllm参考
